<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home"
    tools:context=".TambahKandangActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewJudulFormTambahKandang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:gravity="center"
            android:text="@string/judul_form_tambahkan_kandang"
            android:textColor="@color/tema_aplikasi"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewNamaKandang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama_kandang"
                android:fontFamily="@font/amaranth"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextNamaKandang"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/hint_nama_kandang"
                android:background="@drawable/input_box"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingStart="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewLokasiKandang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lokasi_kandang"
                android:fontFamily="@font/amaranth"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextLokasiKandang"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/hint_lokasi_kandang"
                android:background="@drawable/input_box"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingStart="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewLuasKandang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/luas_kandang"
                android:fontFamily="@font/amaranth"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <SeekBar
                android:id="@+id/seekBarLuasKandang"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:max="100"
                android:progress="50"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewKapasitasKandang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kapasitas_hewan"
                android:fontFamily="@font/amaranth"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextKapasitasKandang"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/input_box"
                android:ems="10"
                android:hint="@string/hint_kapasitas_hewan"
                android:inputType="number"
                android:paddingStart="10dp" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonSimpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/simpan"
            app:icon="@drawable/ic_simpan"
            app:iconGravity="textEnd" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>