<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home"
    tools:context=".RegisterActivity">
    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="657dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:visibility="visible"
            app:srcCompat="@drawable/logo_png" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewNama"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center|end"
                    android:text="@string/nama"
                    android:textColor="@color/tema_aplikasi3" />

                <EditText
                    android:id="@+id/editTextNama"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/input_box"
                    android:drawableEnd="@drawable/costum_ic_person"
                    android:ems="10"
                    android:hint="@string/hint_nama"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewEmail"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|end"
                    android:text="@string/email"
                    android:textColor="@color/tema_aplikasi3" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/input_box"
                    android:drawableEnd="@drawable/costum_ic_email"
                    android:ems="10"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:paddingEnd="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewPassword"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:gravity="center|center_horizontal"
                    android:paddingLeft="20dp"
                    android:text="@string/password"
                    android:textColor="@color/tema_aplikasi3"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/input_box"
                    android:drawableEnd="@drawable/costum_ic_lock"
                    android:ems="10"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingEnd="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewAlamat"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:gravity="center|center_horizontal"
                    android:paddingLeft="20dp"
                    android:text="@string/alamat"
                    android:textColor="@color/tema_aplikasi3"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/editTextAlamat"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/input_box"
                    android:ems="10"
                    android:hint="@string/hint_alamat"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingEnd="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewNoTelp"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:gravity="center|center_horizontal"
                    android:paddingLeft="20dp"
                    android:text="@string/no_telp"
                    android:textColor="@color/tema_aplikasi3"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/editTextNoTelp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/input_box"
                    android:ems="10"
                    android:hint="@string/hint_no_telp"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingEnd="20dp" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonDaftar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/tema_aplikasi"
                android:insetLeft="100dp"
                android:insetRight="100dp"
                android:text="@string/register"
                app:cornerRadius="25dp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>