<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home"
    tools:context=".TambahObatActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewJudulFormTambahObat"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="@font/aclonica"
            android:gravity="center"
            android:text="Form Tambahkan Obat"
            android:textColor="@color/tema_aplikasi"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewNamaObat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama_obat"
                android:fontFamily="@font/amaranth"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextNamaObat"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="Contoh: Vita Plex"
                android:background="@drawable/input_box"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingStart="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewJumlahObat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amaranth"
                android:paddingStart="10dp"
                android:text="Jumlah Obat: "
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextJumlahObat"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/input_box"
                android:ems="10"
                android:hint="@string/hint_jumlah_hewan"
                android:inputType="number"
                android:paddingStart="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewDeskripsiObat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amaranth"
                android:paddingStart="10dp"
                android:text="@string/deskripsi_obat"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextDeskripsiObat"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/input_box"
                android:ems="10"
                android:hint="@string/hint_deskripsi_obat"
                android:inputType="textMultiLine"
                android:paddingStart="10dp" />
        </LinearLayout>


        <CheckBox
            android:id="@+id/checkBoxPeraturan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/peraturan_obat" />

        <Button
            android:id="@+id/buttonSimpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/simpan"
            app:icon="@drawable/ic_simpan"
            app:iconGravity="textEnd" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>